2010-10-31  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tcl.m4     Add -D_CRT_SECURE_NO_DEPRECATE and
	-D_CRT_NONSTDC_NO_DEPRECATE, reducing the number of
	deprecation warnings on later VC++ versions.
	* win/rules.vc   Better VCVERSION determination
	* win/configure  (regenerated with autoconf 2.13)
	All changes backported from Tcl8.5/8.6

2010-10-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* tools/uniParse.tcl:   [Bug 3085863]: tclUniData 9 years old
	* tools/uniClass.tcl:   Upgrade everything to Unicode 6.0, except
	* tests/utf.test:       non-BMP characters > 0xFFFF
	* generic/tclUniData.c: (re-generated)
	* generic/regc_locale.c:(re-generated)
	* generic/regcomp.c:    fix comment/signatures referencing regc_locale
	* win/rules.vc          Update for VS10

2010-09-24  Andreas Kupries  <andreask@activestate.com>

	* tclWinsock.c: [Bug 3056775]: Fixed race condition between thread
	and internal co-thread access of a socket's structure because of
	the thread not using the socketListLock in TcpAccept(). Added
	documentation on how the module works to the top.

2010-09-01  Andreas Kupries  <andreask@activestate.com>

	* generic/tclExecute.c: [Bug 3057639]. Applied patch by Jeff to
	* generic/tclVar.c: make the behaviour of lappend in bytecompiled
	* tests/append.test: mode consistent with direct-eval and 'append'
	* tests/appendComp.test: generally. Added tests (append*-9.*)
	showing the difference.

2010-07-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.h: [Bug 3030870] make itcl 3.x built with pre-8.6
	* generic/tclBasic.c: work in 8.6 revert tclInt.h to what it was
	before, and relax the relation between Tcl_CallFrame and
	CallFrame.

2010-07-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h: [Bug 3031278] fixed merge problem in previous
	commit.

2010-07-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h: [Bug 3030870] make itcl 3.x built with pre-8.6
	* generic/tclInt.h: work in 8.6
